<resources>
    <string name="app_name">PopMovie</string>
    <string name="action_Setting">设置</string>

    <string name="sort_order">排序方式</string>
    <string name="order_type_key">OrderType</string>

    <string name="order_opt_popular">最受欢迎</string>
    <string name="order_opt_toprated">最高评分</string>
    <string name="order_opt_collect">收藏列表</string>

    <string name="order_val_popular">popular</string>
    <string name="order_val_toprated">top_rated</string>
    <string name="order_val_collect">collect_list</string>

    <string name="title_activity_detail">MovieDetail</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <string name="action_share">分享</string>

    <string name="content_authority">com.example.android.popmovie_fin.app</string>
    <string name="sync_account_type">PopMovie.example.com</string>

    <string name="content_max_line">3</string>

    <!--通知使能参数-->
    <string name="pref_last_notification">last_notification</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_lable" >Movie Notification</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
</resources>
