<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <ListPreference
        android:title="@string/sort_order"
        android:key="@string/order_type_key"
        android:defaultValue="@string/order_val_popular"
        android:entryValues="@array/order_type_values"
        android:entries="@array/order_type_option" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_lable"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default"
        />

</PreferenceScreen>